Fixes for attaching buttons to links within the TextView

--- a/htmlpple/test-data.html
+++ b/htmlpple/test-data.html
@@ -1,5 +1,5 @@
 <div class="md">
-    <p><a href="http://www.google.com">Google asldjalsdjaklsdjal skdjalskdjal ksdjalskasdlkasl kdjasldjalskd jalksdja lksdja slkdjaslkdj</a></p>
+    <p><a href="http://www.google.com">Google long link asldjalsdjaklsdjal skdjalskdjal ksdjalskasdlkasl kdjasldjalskd jalksdja lksdja slkdjaslkdj</a></p>
     <p><a href="http://www.amazon.com">Amazon</a></p>
     <p><a href="http://www.spotify.com/2">Spotify</a>
     
