Added support for nested indent. refactored parse blocks. removed retain cycles. Fixed link tap

--- a/htmlpple/test-data-0.html
+++ b/htmlpple/test-data-0.html
@@ -10,12 +10,12 @@
         <li>List item 2</li>
         <li><a href="http://www.reddit.com">List item 3</a></li>
         <ul>
-            <li>List item 3.1 nesting not supported</li>
+            <li>List item 3.1 nesting</li>
             <li>List item 3.2</li>
         </ul>
     </ul>
-    <blockquote>Quote 1:<p>paragraph 1 loses indent</p><p>paragraph 2</p><a href="http://www.google.com">quoted link has indent</a></blockquote>
-    <blockquote>Quote 2:<p>Contains linebreak <br/>which screws formatting</p></blockquote>
+    <blockquote>Quote 1:<p>paragraph 1</p><p>paragraph 2</p><a href="http://www.google.com">quoted link</a></blockquote>
+    <blockquote>Quote 2:<p>Contains linebreak <br/></p></blockquote>
     <blockquote>Quote 3:<p>Contains list</p><ul><li>quoted list item</li></ul></blockquote>
     <pre>if (preformattedText == YES)
 {
