Fixed issue with bullet lists losing formatting

--- a/htmlpple/test-data-0.html
+++ b/htmlpple/test-data-0.html
@@ -7,7 +7,7 @@
     <a href="http://www.spotify.com/1">Spotify (testing same link)</a></p>
     <ul>
         <li><p>List item 1</p></li>
-        <li>List item 2</li>
+        <li><p>List item 2</p></li>
         <li><a href="http://www.reddit.com">List item 3</a></li>
         <ul>
             <li>List item 3.1 nesting</li>
